test/errors/resolution/throwInNonThrowRelaxedMod.chpl
module M {
  proc canThrow() throws {
    throw new owned Error();
  }
  canThrow();
}
